Include Vector DB config in config file

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,15 @@
 [default]
 WhisperSize = small
 OllamaModel = gemma:2b
+EmbeddingModelName = all-MiniLM-L6-v2
+ChromaDBPersistDir = ./chroma_db
+DocumentChunkSize = 60
+DocumentChunkOverlap = 0
 
 [test]
 WhisperSize = tiny
 OllamaModel = gemma:2b
+EmbeddingModelName = all-MiniLM-L6-v2
+ChromaDBPersistDir = ./chroma_db
+DocumentChunkSize = 60
+DocumentChunkOverlap = 0
